# tools

./: .gitattributes  .gitignore  .gitmodules  .prettierignore  AGENT.md  CLAUDE.md  astro.config.mjs  build.zig.zon  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json  wrangler.jsonc  wrangler.toml
.astro/: settings.json
.github/workflows/: deploy.yml  format.yml
public/: _headers  robots.txt
public/.well-known/agent-skills/: index.json
public/.well-known/agent-skills/wizgo-tools/: SKILL.md
public/wasm/: image-converter.js  image-converter.wasm
rust-wasm/: Cargo.toml
rust-wasm/.cargo/: config.toml
rust-wasm/crates/core/: Cargo.toml
rust-wasm/crates/core/src/: lib.rs
rust-wasm/crates/image/: Cargo.toml
rust-wasm/crates/image/src/: lib.rs
rust-wasm/crates/mp3/: Cargo.toml
rust-wasm/crates/mp3/src/: lib.rs
rust-wasm/crates/watermark/: Cargo.toml
rust-wasm/crates/watermark/src/: lib.rs
rust-wasm/src/: lib.rs
scripts/: build-wasm.sh  check-i18n-placeholders.ts  ci_setup.sh
src/: lib.rs  main.zig
src/components/layout/: Container.astro  Footer.astro  Header.astro  LanguageSwitcher.astro
src/components/pages/: AboutPage.astro  Base64Page.astro  CodeImagePage.astro  ColorPage.astro  CompressFormatPage.astro  CompressMp3Page.astro  CompressPage.astro  ConvertPage.astro  ConvertPairPage.astro  HashPage.astro  HomePage.astro  JsonPage.astro  JwtPage.astro  Mp4ToMp3Page.astro  NotFoundPage.astro  PasswordPage.astro  PdfCompressPage.astro  PdfMergePage.astro  QrcodePage.astro  TextWatermarkPage.astro  TimestampPage.astro  UrlEncodePage.astro  UuidPage.astro  WatermarkPage.astro
src/components/ui/: Badge.astro  Button.astro  ProgressBar.astro  SearchBox.astro  SmallToolCard.astro  ToolCard.astro  ToolSection.astro
src/data/: tools.ts  word.ts
src/i18n/: config.ts  index.ts  llmsTxt.ts  schema.ts  seo.ts
src/i18n/locales/: en.ts  es.ts  fr.ts  ja.ts  ko.ts  zh-CN.ts  zh-TW.ts
src/layouts/: Layout.astro
src/pages/: 404.astro  [from]-to-[to].astro  about.astro  audio.astro  base64.astro  code-image.astro  color.astro  compress-[format].astro  compress-mp3.astro  compress.astro  convert.astro  hash.astro  image.astro  index.astro  json.astro  jwt.astro  llms-full.txt.ts  llms.txt.ts  mp4-to-mp3.astro  password.astro  pdf-compress.astro  pdf-merge.astro  qrcode.astro  text-watermark.astro  timestamp.astro  url-encode.astro  uuid.astro  watermark.astro
src/pages/[locale]/: 404.astro  [from]-to-[to].astro  about.astro  base64.astro  code-image.astro  color.astro  compress-[format].astro  compress-mp3.astro  compress.astro  convert.astro  hash.astro  index.astro  json.astro  jwt.astro  llms-full.txt.ts  llms.txt.ts  manifest.webmanifest.ts  mp4-to-mp3.astro  password.astro  pdf-compress.astro  pdf-merge.astro  qrcode.astro  text-watermark.astro  timestamp.astro  url-encode.astro  uuid.astro  watermark.astro
src/scripts/: clipboard.ts  compress-mp3.ts  compress-page.ts  convert-page.ts  dct8.ts  dropzone.ts  image-compare.test.ts  image-compare.ts  mp4-to-mp3.ts  paste-image.ts  pdf-compress.ts  pdf-merge.ts  text-watermark.ts  watermark.ts
src/styles/: global.css
src/types/: index.ts
src/wasm/: canvas-converter.js  image-converter.js  image-worker.ts  jpeg-bridge.ts  jpeg-worker.ts  mp3-bridge.ts  mp3-worker.ts  rust-image-converter.js  vips-converter.js  watermark-bridge.ts  watermark-worker.ts  webp-bridge.ts  webp-worker.ts
src/wasm/rust-image/: image_converter.d.ts  image_converter.js  image_converter_bg.wasm.d.ts
src/wasm/rust-image/image/: image_tools.d.ts  image_tools.js  image_tools_bg.wasm  image_tools_bg.wasm.d.ts  package.json
src/wasm/rust-image/mp3/: mp3_encode_bg.wasm
src/wasm/rust-image/watermark/: watermark.d.ts  watermark.js  watermark_bg.wasm  watermark_bg.wasm.d.ts
zig-wasm/: README.md
zig-wasm/jpeg/: build.zig
zig-wasm/jpeg/config/: jconfig.h  jconfigint.h  jversion.h
zig-wasm/jpeg/src/: wrapper.c
zig-wasm/webp/: build.zig
zig-wasm/webp/src/: wrapper.c
(+9 files in other folders)
