[package]
name = "image-converter"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "bmp", "gif", "webp"] }
imagequant = { version = "4.3", default-features = false }
lodepng = { version = "3.10", default-features = false }
jpeg-encoder = "0.6"
console_error_panic_hook = { version = "0.1.7", optional = true }
rexif = "0.7"

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "s"
lto = true
