[workspace]
members = ["crates/core", "crates/image", "crates/watermark", "crates/mp3"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"
image = { version = "0.25", default-features = false }
console_error_panic_hook = "0.1.7"

[profile.release]
opt-level = "s"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
