[package]
name = "wizgo-core"
version.workspace = true
edition.workspace = true

[dependencies]
image = { workspace = true, features = ["png", "jpeg"] }
lodepng = { version = "3.10", default-features = false }
console_error_panic_hook = { workspace = true, optional = true }

[features]
default = []
panic-hook = ["dep:console_error_panic_hook"]
